--- a/template.ipynb
+++ b/template.ipynb
@@ -12,22 +12,29 @@
    "execution_count": null,
    "metadata": {
     "dotnet_interactive": {
-     "language": "csharp"
+     "language": "value"
     },
     "polyglot_notebook": {
-     "kernelName": "csharp"
+     "kernelName": "value"
     }
    },
-   "outputs": [
-    {
-     "ename": "Error",
-     "evalue": "Command failed: SubmitCode: #!value --name data",
-     "output_type": "error",
-     "traceback": [
-      "Command failed: SubmitCode: #!value --name data"
-     ]
+   "outputs": [],
+   "source": [
+    "#!value --name exampledata"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "value"
+    },
+    "polyglot_notebook": {
+     "kernelName": "value"
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "#!value --name data\n"
    ]
