--- a/template.ipynb
+++ b/template.ipynb
@@ -74,6 +74,43 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Data Selector"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#!set --name fulldata --value @value:data\n",
+    "#!set --name partialData --value @value:exampledata\n",
+    "\n",
+    "var rawdata = partialData;\n",
+    "var data = rawdata.ReplaceLineEndings(\"\\n\");"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Imports"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "using System.Text.RegularExpressions;\n",
+    "using System.Linq;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Part 1"
    ]
   }
