--- a/template.ipynb
+++ b/template.ipynb
@@ -80,10 +80,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
    "outputs": [],
    "source": [
-    "#!set --name fulldata --value @value:data\n",
+    "#!set --name fullData --value @value:data\n",
     "#!set --name partialData --value @value:exampledata\n",
     "\n",
     "var rawdata = partialData;\n",
@@ -100,9 +107,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
    "outputs": [],
    "source": [
+    "using System;\n",
     "using System.Text.RegularExpressions;\n",
     "using System.Linq;"
    ]
