--- a/template.ipynb
+++ b/template.ipynb
@@ -118,6 +118,7 @@
    "outputs": [],
    "source": [
     "using System;\n",
+    "using System.Collections;\n",
     "using System.Text.RegularExpressions;\n",
     "using System.Linq;"
    ]
