--- a/day11.ipynb
+++ b/day11.ipynb
@@ -156,7 +156,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -208,7 +215,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
    "outputs": [],
    "source": [
     "int StringLength(Int128 n) => $\"{n}\".Length;\n",
@@ -227,7 +241,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
    "outputs": [],
    "source": [
     "List<Int128> Tick(List<Int128> state) {\n",
@@ -250,27 +271,294 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
    "outputs": [
     {
-     "ename": "Error",
-     "evalue": "Command cancelled.",
-     "output_type": "error",
-     "traceback": [
-      "Command cancelled."
-     ]
+     "data": {
+      "text/html": [
+       "<div class=\"dni-plaintext\"><pre>209412</pre></div><style>\r\n",
+       ".dni-code-hint {\r\n",
+       "    font-style: italic;\r\n",
+       "    overflow: hidden;\r\n",
+       "    white-space: nowrap;\r\n",
+       "}\r\n",
+       ".dni-treeview {\r\n",
+       "    white-space: nowrap;\r\n",
+       "}\r\n",
+       ".dni-treeview td {\r\n",
+       "    vertical-align: top;\r\n",
+       "    text-align: start;\r\n",
+       "}\r\n",
+       "details.dni-treeview {\r\n",
+       "    padding-left: 1em;\r\n",
+       "}\r\n",
+       "table td {\r\n",
+       "    text-align: start;\r\n",
+       "}\r\n",
+       "table tr { \r\n",
+       "    vertical-align: top; \r\n",
+       "    margin: 0em 0px;\r\n",
+       "}\r\n",
+       "table tr td pre \r\n",
+       "{ \r\n",
+       "    vertical-align: top !important; \r\n",
+       "    margin: 0em 0px !important;\r\n",
+       "} \r\n",
+       "table th {\r\n",
+       "    text-align: start;\r\n",
+       "}\r\n",
+       "</style>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
     "List<Int128> TickN(List<Int128> startState, int n) {\n",
     "    List<Int128> state = startState;\n",
+    "    var timer = Stopwatch.StartNew();\n",
+    "    var splits = Stopwatch.StartNew();\n",
     "    for (int i = 0; i < n; i++) {\n",
     "        state = Tick(state);\n",
+    "        // Print($\"{i}: {timer.Elapsed}  {splits.Elapsed}\");\n",
+    "        splits.Restart();\n",
     "    }\n",
     "    return state;\n",
     "}\n",
     "\n",
-    "// TickN(startStones, 75).Count"
+    "TickN(startStones, 25).Count"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Part 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "int[] rules = [0, 0, 0];\n",
+    "\n",
+    "List<Int128> Tick2(List<Int128> state) {\n",
+    "    List<Int128> newState = [];\n",
+    "    foreach (Int128 stone in state) {\n",
+    "        if (stone == 0) {\n",
+    "            rules[0]++;\n",
+    "            newState.Add(1);\n",
+    "        } else if (IsEvenLength(stone)) {\n",
+    "            rules[1]++;\n",
+    "            var (start, end) = LexicalSplit(stone);\n",
+    "            newState.Add(start);\n",
+    "            newState.Add(end);\n",
+    "        } else {\n",
+    "            rules[2]++;\n",
+    "            newState.Add(stone * 2024);\n",
+    "        }\n",
+    "    }\n",
+    "    return newState;\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div class=\"dni-plaintext\"><pre>39556</pre></div><style>\r\n",
+       ".dni-code-hint {\r\n",
+       "    font-style: italic;\r\n",
+       "    overflow: hidden;\r\n",
+       "    white-space: nowrap;\r\n",
+       "}\r\n",
+       ".dni-treeview {\r\n",
+       "    white-space: nowrap;\r\n",
+       "}\r\n",
+       ".dni-treeview td {\r\n",
+       "    vertical-align: top;\r\n",
+       "    text-align: start;\r\n",
+       "}\r\n",
+       "details.dni-treeview {\r\n",
+       "    padding-left: 1em;\r\n",
+       "}\r\n",
+       "table td {\r\n",
+       "    text-align: start;\r\n",
+       "}\r\n",
+       "table tr { \r\n",
+       "    vertical-align: top; \r\n",
+       "    margin: 0em 0px;\r\n",
+       "}\r\n",
+       "table tr td pre \r\n",
+       "{ \r\n",
+       "    vertical-align: top !important; \r\n",
+       "    margin: 0em 0px !important;\r\n",
+       "} \r\n",
+       "table th {\r\n",
+       "    text-align: start;\r\n",
+       "}\r\n",
+       "</style>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div class=\"dni-plaintext\"><pre>[ 3490, 39554, 30440 ]</pre></div><style>\r\n",
+       ".dni-code-hint {\r\n",
+       "    font-style: italic;\r\n",
+       "    overflow: hidden;\r\n",
+       "    white-space: nowrap;\r\n",
+       "}\r\n",
+       ".dni-treeview {\r\n",
+       "    white-space: nowrap;\r\n",
+       "}\r\n",
+       ".dni-treeview td {\r\n",
+       "    vertical-align: top;\r\n",
+       "    text-align: start;\r\n",
+       "}\r\n",
+       "details.dni-treeview {\r\n",
+       "    padding-left: 1em;\r\n",
+       "}\r\n",
+       "table td {\r\n",
+       "    text-align: start;\r\n",
+       "}\r\n",
+       "table tr { \r\n",
+       "    vertical-align: top; \r\n",
+       "    margin: 0em 0px;\r\n",
+       "}\r\n",
+       "table tr td pre \r\n",
+       "{ \r\n",
+       "    vertical-align: top !important; \r\n",
+       "    margin: 0em 0px !important;\r\n",
+       "} \r\n",
+       "table th {\r\n",
+       "    text-align: start;\r\n",
+       "}\r\n",
+       "</style>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "List<Int128> Tick2N(List<Int128> startState, int n) {\n",
+    "    List<Int128> state = startState;\n",
+    "    var timer = Stopwatch.StartNew();\n",
+    "    var splits = Stopwatch.StartNew();\n",
+    "    for (int i = 0; i < n; i++) {\n",
+    "        state = Tick2(state);\n",
+    "        // Print($\"{i}: {timer.Elapsed}  {splits.Elapsed}\");\n",
+    "        splits.Restart();\n",
+    "    }\n",
+    "    return state;\n",
+    "}\n",
+    "\n",
+    "rules = [0, 0, 0];\n",
+    "display(Tick2N([0, 0], 25).Count);\n",
+    "display(rules);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "public static Int128 Sum(this IEnumerable<Int128> self) {\n",
+    "    Int128 acc = 0;\n",
+    "    foreach (var i in self) {\n",
+    "        acc += i;\n",
+    "    }\n",
+    "    return acc;\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<details open=\"open\" class=\"dni-treeview\"><summary><span class=\"dni-code-hint\"><code>248967696501656</code></span></summary><div><table><thead><tr></tr></thead><tbody></tbody></table></div></details><style>\r\n",
+       ".dni-code-hint {\r\n",
+       "    font-style: italic;\r\n",
+       "    overflow: hidden;\r\n",
+       "    white-space: nowrap;\r\n",
+       "}\r\n",
+       ".dni-treeview {\r\n",
+       "    white-space: nowrap;\r\n",
+       "}\r\n",
+       ".dni-treeview td {\r\n",
+       "    vertical-align: top;\r\n",
+       "    text-align: start;\r\n",
+       "}\r\n",
+       "details.dni-treeview {\r\n",
+       "    padding-left: 1em;\r\n",
+       "}\r\n",
+       "table td {\r\n",
+       "    text-align: start;\r\n",
+       "}\r\n",
+       "table tr { \r\n",
+       "    vertical-align: top; \r\n",
+       "    margin: 0em 0px;\r\n",
+       "}\r\n",
+       "table tr td pre \r\n",
+       "{ \r\n",
+       "    vertical-align: top !important; \r\n",
+       "    margin: 0em 0px !important;\r\n",
+       "} \r\n",
+       "table th {\r\n",
+       "    text-align: start;\r\n",
+       "}\r\n",
+       "</style>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "// Build a lookup table mapping value and number of requested ticks to size of list.\n",
+    "\n",
+    "Dictionary<(Int128 Value, int ticks), Int128> Solved = [];\n",
+    "\n",
+    "\n",
+    "Int128 ProcessValue(Int128 value, int ticks) {\n",
+    "    if (ticks == 0) {\n",
+    "        return 1;\n",
+    "    }\n",
+    "    (Int128 Value, int ticks) key = (value, ticks);\n",
+    "    if (!Solved.ContainsKey(key)) {\n",
+    "        var nextList = Tick([value]);\n",
+    "        Solved.Add(key, nextList.Select(v => ProcessValue(v, ticks - 1)).Sum());\n",
+    "    }\n",
+    "    return Solved[key];\n",
+    "}\n",
+    "\n",
+    "Int128 ProcessList(List<Int128> list, int ticks) =>\n",
+    "    list.Select(v => ProcessValue(v, ticks)).Sum();\n",
+    "\n",
+    "ProcessList(startStones, 75)"
    ]
   }
  ],
