Template improvements, added coord lib

--- a/template.ipynb
+++ b/template.ipynb
@@ -74,6 +74,33 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Imports"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "using System;\n",
+    "using System.Collections;\n",
+    "using System.Text.RegularExpressions;\n",
+    "using System.Linq;\n",
+    "using System.Diagnostics;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Data Selector"
    ]
   },
@@ -95,32 +122,6 @@
     "\n",
     "var rawdata = partialData;\n",
     "var data = rawdata.ReplaceLineEndings(\"\\n\");"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Imports"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "polyglot_notebook": {
-     "kernelName": "csharp"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "using System;\n",
-    "using System.Collections;\n",
-    "using System.Text.RegularExpressions;\n",
-    "using System.Linq;"
    ]
   },
   {
