--- a/template.ipynb
+++ b/template.ipynb
@@ -94,7 +94,8 @@
     "using System.Collections;\n",
     "using System.Text.RegularExpressions;\n",
     "using System.Linq;\n",
-    "using System.Diagnostics;"
+    "using System.Diagnostics;\n",
+    "using System.Numerics;"
    ]
   },
   {
